	PR exp/15364: 	* eval.c (evaluate_subexp_standard) <STRUCTOP_STRUCT, 	STRUCTOP_PTR>: Return a not_lval value for 	EVAL_AVOID_SIDE_EFFECTS. 	* opencl-lang.c (evaluate_subexp_opencl): Return a not_lval value 	for EVAL_AVOID_SIDE_EFFECTS. gdb/testsuite 	* gdb.base/exprs.exp (test_expr): Add regression test. 	* gdb.base/exprs.c (null_t_struct): New global.